--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <title>BuyBuddy</title>
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#6C63FF" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
