Rename project from BuyBuddy to ListCart

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BuyBuddy</title>
+    <title>ListCart - Your Shopping List App</title>
     <meta name="google-site-verification" content="uLBNl5YtfggBnUoWNf7VH9fi2JJZMVmgEEG5Rn3eS1k" />
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="manifest" href="manifest.json" />
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <h1>BuyBuddy</h1>
+      <h1>ListCart</h1>
       <button class="theme-toggle">🌙</button>
     </header>
 
@@ -26,7 +26,7 @@
     </div>
 
     <button class="install-btn" style="display: none">⬇️ Install</button>
-    <div class="toast" id="toast">App installed successfully 🎉</div>
+    <div class="toast" id="toast">App installation started. Check your notifications! 🎉</div>
 
     <script src="script.js"></script>
   </body>
