keyword and meta desc. tags added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ListCart - Your Shopping List App</title>
+    <meta name="description" content="ListCart helps you create, manage, and tick off your shopping and grocery lists with ease. Stay organized every time you go to the store." />
+    <meta name="keywords" content="ListCart, shopping list app, grocery list, buy list, checklist, cart manager, list app" />
+    <meta name="author" content="Amol Kamble" />
     <meta name="google-site-verification" content="uLBNl5YtfggBnUoWNf7VH9fi2JJZMVmgEEG5Rn3eS1k" />
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="manifest" href="manifest.json" />
