icon folder created

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="ListCart, shopping list app, grocery list, buy list, checklist, cart manager, list app" />
     <meta name="author" content="Amol Kamble" />
     <meta name="google-site-verification" content="uLBNl5YtfggBnUoWNf7VH9fi2JJZMVmgEEG5Rn3eS1k" />
-    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/icons/favicon.ico" type="image/x-icon">
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#6C63FF" />
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet"/>
