br tag add in success msg

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <button class="install-btn" style="display: none">⬇️ Install</button>
-    <div class="toast" id="toast">App installation started. Check your notifications! 🎉</div>
+    <div class="toast" id="toast">App installation started.</br> Check your notifications! 🎉</div>
 
     <script src="script.js"></script>
   </body>
