some modification done in index file and style

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="google-site-verification" content="uLBNl5YtfggBnUoWNf7VH9fi2JJZMVmgEEG5Rn3eS1k" />
     <link rel="shortcut icon" href="./images/icons/favicon.ico" type="image/x-icon">
     <link rel="manifest" href="manifest.json" />
-    <!-- <meta name="theme-color" content="#6C63FF" /> -->
+    <meta name="theme-color" content="#d9ebff" />
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css" />
@@ -20,7 +20,7 @@
     <div id="sidebar" class="sidebar">
         <button id="closeSidebarBtn" class="close-sidebar-btn" aria-label="Close menu">&times;</button>
         <div class="sidebar-content">
-            <h2 class="sidebar-heading">ListCart Menu</h2>
+            <h2 class="sidebar-heading">Menu</h2>
             <ul>
                 <li><a href="#" class="menu-link" id="aboutLink">About This App</a></li>
                 <li><a href="#" class="menu-link" id="howToUseLink">How to Use</a></li>
@@ -87,7 +87,7 @@
 
         <!-- How To Use Page -->
         <div id="howToUsePage" class="content-page">
-            <h2>How to Use ListCart</h2>
+            <h2>How to Use</h2>
             <h3>1. Adding Items:</h3>
             <p>Type your item in the input field. You can include a quantity and measurement at the end. For example:</p>
             <ul>
@@ -126,7 +126,7 @@
 
         <!-- Privacy Policy Page -->
         <div id="privacyPolicyPage" class="content-page">
-            <h2>Privacy Policy for ListCart</h2>
+            <h2>Privacy Policy</h2>
             <p>This Privacy Policy describes how your personal information is handled in ListCart. Please read this policy carefully to understand our practices regarding your information.</p>
 
             <h3>Information We Collect</h3>
