meta theme-color changed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="google-site-verification" content="uLBNl5YtfggBnUoWNf7VH9fi2JJZMVmgEEG5Rn3eS1k" />
     <link rel="shortcut icon" href="./images/icons/favicon.ico" type="image/x-icon">
     <link rel="manifest" href="manifest.json" />
-    <meta name="theme-color" content="#d9ebff" />
+    <meta name="theme-color" content="#f4f7f6" />
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css" />
@@ -51,7 +51,7 @@
             </div>
 
             <div class="add-item-group">
-                <input type="text" id="itemInput" placeholder="Add item (e.g., Milk 500ml, Banana 0.5dz)...">
+                <input type="text" id="itemInput" placeholder="Add item (e.g., Milk 500ml)">
                 <button id="addItemBtn">Add</button>
             </div>
 
